--- a/src/components/Categories.css
+++ b/src/components/Categories.css
@@ -1,7 +1,22 @@
-/* Categories.css */
+@font-face {
+  font-family: Prompt;
+  src: url(../fonts/Prompt/Prompt-SemiBold.ttf);
+}
+
+@font-face {
+  font-family: Telex;
+  src: url(../fonts/Telex/Telex-Regular.ttf);
+}
+
+@font-face {
+  font-family: Varela;
+  src: url(../fonts/Varela/Varela-Regular.ttf);
+}
+
 .categories-container {
   margin: 18px 18px;
   padding: 0 1rem;
+  font-family: Telex;
 }
 
 .categories-scroll {
@@ -35,6 +50,7 @@
   font-weight: 500;
   padding: 0.5rem;
   white-space: normal;
+  font-family: Telex;
 }
 
 .category-item:hover {
