--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -1,44 +1,54 @@
 .card {
-  width: 100%;
-  max-width: 280px;
+  width: 300px;
   padding: 20px;
+  border-radius: 10px;
   margin: 15px;
-  background-color: #fff;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   text-align: center;
-  transition: transform 0.2s ease-in-out;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+  transition: transform 0.5s ease, box-shadow 0.3s ease;
+  cursor: pointer;
 }
 
 .card:hover {
+  background: #a899c030;
+box-shadow: 0 8px 32px 0 #945ACB;
+backdrop-filter: blur( 14.5px );
+border: 1px solid rgba( 255, 255, 255, 0.18 );
   transform: translateY(-5px);
 }
 
-.image {
+.card img {
   width: 100%;
-  height: 200px;
+  height: 300px;
   object-fit: cover;
   border-radius: 10px;
   margin-bottom: 15px;
 }
 
-.title {
-  font-size: 16px;
-  font-weight: 600;
-  color: #333;
-  margin: 10px 0;
-}
-
-.description {
-  font-size: 14px;
-  color: #666;
-  margin-bottom: 12px;
-  height: 50px;
-  overflow: hidden;
-}
-
-.price {
+.card-title {
+  background-color: rgba(255, 0, 0, 0);
   font-size: 18px;
-  color: #27ae60;
   font-weight: bold;
+  margin: 10px 0;
+  color: white;
+  font-family: 'Telex';
+}
+
+.card-description {
+  background-color: rgba(255, 0, 0, 0);
+  font-size: 14px;
+  color: white;
+  margin-bottom: 15px;
+  height: 60px;
+  overflow: hidden;
+  font-family: 'Varela';
+}
+
+.card-price {
+  background-color: rgba(255, 0, 0, 0);
+  font-size: 18px;
+  font-weight: bold;
+  margin: 10px 0;
+  color: white;
+  font-family: 'Telex';
 }
