--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -52,3 +52,8 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
   color: white;
   font-family: 'Telex';
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
