--- a/src/components/ProductDetails.css
+++ b/src/components/ProductDetails.css
@@ -57,7 +57,7 @@
 }
 
 .price-action-section {
-  background: #ffffff08;
+  background: #ffffff00;
   padding: 2rem;
   border-radius: 12px;
   border: 1px solid #ffffff10;
@@ -67,6 +67,7 @@
   display: block;
   font-size: 2.8rem;
   font-family: 'Prompt', sans-serif;
+  background-color: #2e2e2e00;
   color: var(--secondary);
   margin-bottom: 2rem;
   font-weight: 700;
