--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,14 @@
   padding: 0;
   background-color: #2E2E2E
 }
+
+
+body {
+  overflow-x: hidden;
+}
+
+@media (max-width: 768px) {
+  .main-content {
+    padding: 1rem 0;
+  }
+}
